# relico

./: .gitattributes  .gitignore  AGENTS.md  README.md  index.html  justfile  package.json  playwright.config.ts  wdio.conf.ts
.github/workflows/: windows.yml
.stratal/: brief.md
docs/: ARCHITECTURE.md  E2E.md  SPEC.md  WINDOWS.md
specs/: notifier.pkl  patterns.pkl
src/: i18n.ts  icons.ts  locales.json  main.ts  styles.css  tabs.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.e2e.conf.json  tauri.notification-test.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  backoff.rs  commands.rs  config.rs  content_filter.rs  content_palette.rs  dedup.rs  filter.rs  i18n.rs  lib.rs  main.rs  model.rs  notify.rs  palette.rs  poller.rs  timed.rs
src-tauri/src/timed/: browse_wf.rs  de.rs  wfcd.rs
src-tauri/tests/: examples.rs  oracles_generated.proptest-regressions  oracles_generated.rs
src-tauri/tests/fixtures/: fissures.json
tests/e2e/: oracles_generated.e2e.ts
tests/renderer/: harness.ts  oracles_generated.spec.ts
tests/unit/: oracles_generated.test.ts
tools/: build-frontend-e2e.ts  build.ts  command.ts  e2e-capability.json  e2e-process.ts  macos-smoke.sh  run-e2e.ts  spec-check.ts  spec-gen.ts
